...
            const Padding(
              padding: EdgeInsets.fromLTRB(0, 20, 0, 0),
            ),
            ElevatedButton(
              
              // Here we are giving the new game button a key for use in our integration tests in test/integration_tests.dart.
              key: const Key('new-game-button'),
              child: const Text("New Game",
                  style: TextStyle(fontSize: 25)),
              onPressed: () async {
                String word =
                    await HangmanGame.getStartingWord(areWeInIntegrationTest);

...
